# SystemProgrammingA2

./: CMakeLists.txt  makefile  readme.txt
inc/: encodeInput.h
src/: converter.c  encoder.c  main.c  middleman.c
